# hands-on_microservices_with_rust

./: README.md
chapter4/random-value-generating/: Cargo.toml  result.txt
chapter4/random-value-generating/src/: main.rs
chapter4/random-value-generating_data_formats/: .env  Cargo.toml
chapter4/random-value-generating_multiple_formats/: Cargo.toml
chapter4/random-value-generating_multiple_formats/src/: main.rs
chapter5/alt_udp_echo/: Cargo.toml
chapter5/alt_udp_echo/src/: main.rs
chapter5/image_service/: Cargo.toml
chapter5/image_service/src/: main.rs
chapter5/multiple/: Cargo.toml
chapter5/multiple/src/: main.rs
chapter5/send_spawn/: Cargo.toml
chapter5/send_spawn/src/: main.rs
chapter5/single/: Cargo.toml
chapter5/single/src/: main.rs
dmhc/hyper-microservice/: Cargo.toml
dmhc/hyper-microservice/src/: main.rs
dsdsc/random-value-generating/: Cargo.toml
dsdsc/random-value-generating/src/: color.rs  main.rs
lcm/random-value-generating/: Cargo.toml
lcm/random-value-generating/src/: main.rs
