[package]
name = "random-value-generating"
version = "0.1.0"
authors = ["Pick1a1username <20301273+Pick1a1username@users.noreply.github.com>"]
edition = "2018"

[dependencies]
# base64 = "0.9"
# 0.9 is used in the book. But 0.10 is used in the Github repository.
# Also, building is failed if 0.9 is used.
base64 = "0.10"
base64-serde = "0.3"
clap = "2.32"
dotenv = "0.13"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
log = "0.4"
pretty_env_logger = "0.2"
rand = "0.5"
serde = "1.0"
serde_cbor = "0.8" # Supporting the CBOR serialization format.
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
queryst = "2.0" # Parsing parameters from the query string.